# kiroku

./: .gitignore  README.md  codex_prompt.md  design.md  package-lock.json  package.json  prd.txt  requirements.md  tailwind.config.js  tasks.json  tasks.md  tsconfig.json
.github/workflows/: release.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
docs/: user-manual.md
src/: app.css  app.html  copilot_server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md  copilot_server.js  llama-server-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: capture.rs  config.rs  dashboard.rs  db.rs  diff.rs  export.rs  history.rs  lib.rs  main.rs  model_manager.rs  models.rs  preview.rs  recorder.rs  scheduler.rs  session.rs  state.rs  tray.rs  window_meta.rs
src-tauri/src/vlm/: batch.rs  copilot_server.rs  inference.rs  mod.rs  server.rs
src-tauri/wix/: main.wxs
src-tauri/wix/fragments/: data-retention.wxs  per-user-install.wxs
src/lib/: highlight.ts  toast.svelte.ts
src/lib/components/: ToastContainer.svelte
src/lib/components/dashboard/: StatusCard.svelte
src/lib/types/: dashboard.ts  preview.ts  setup.ts
src/routes/: +layout.svelte  +page.svelte  +page.ts
src/routes/dashboard/: +page.svelte
src/routes/export/: +page.svelte
src/routes/history/: +page.svelte
src/routes/preview/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/setup/: +page.svelte
